--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </a>
       <nav class="nav" aria-label="Primary">
         <a href="#works">My Work</a>
-        <a href="https://www.linkedin.com/in/samriddhi-tiwari-2029a7223/" target="_blank" rel="noopener">About Me</a>
+        <a href="www.buildwithsam.work/about-me" target="_blank" rel="noopener">About Me</a>
         <a href="https://medium.com/@samriddhidt" target="_blank" rel="noopener">I Write</a>
       </nav>
       <div class="actions">
