fix: update About Me link to buildwithsam.work

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </a>
       <nav class="nav" aria-label="Primary">
         <a href="#works">My Work</a>
-        <a href="www.buildwithsam.work/about-me" target="_blank" rel="noopener">About Me</a>
+<a href="/about-me/">About Me</a>
         <a href="https://medium.com/@samriddhidt" target="_blank" rel="noopener">I Write</a>
       </nav>
       <div class="actions">
