Link resume CTAs to Drive preview + content tweaks

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </nav>
       <div class="actions">
         <a class="touch" href="mailto:hi@buildwithsam.work"><img src="assets/getintouch_icon.svg" alt=""> Get In Touch</a>
-        <a class="resume-btn" href="resume.pdf" target="_blank" rel="noopener"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
+        <a class="resume-btn" href="https://drive.google.com/file/d/1lS0kjE8geY-OMXZLydEb_Tg09POYE-pJ/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
       </div>
     </div>
   </header>
@@ -211,7 +211,7 @@
       <h1 class="hi">hi!</h1>
       <p class="subline">I’m <b>Samriddhi Tiwari</b>, a growth-focused UX designer.</p>
       <div class="cta-line">
-        <a class="resume-btn" href="resume.pdf" target="_blank" rel="noopener"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
+        <a class="resume-btn" href="https://drive.google.com/file/d/1lS0kjE8geY-OMXZLydEb_Tg09POYE-pJ/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
         <a class="touch" href="#contact"><img src="assets/getintouch_icon.svg" alt=""> Get In Touch</a>
       </div>
     </div>
@@ -259,7 +259,7 @@
     <div class="left">Made w <img src="assets/heart.svg" width="14" alt="heart"> By Samriddhi.</div>
     <div class="right">
       <a class="touch" href="mailto:hi@buildwithsam.work"><img src="assets/getintouch_icon.svg" alt=""> Get In Touch</a>
-      <a class="resume-btn" href="resume.pdf" target="_blank" rel="noopener"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
+        <a class="resume-btn" href="https://drive.google.com/file/d/1lS0kjE8geY-OMXZLydEb_Tg09POYE-pJ/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
     </div>
   </footer>
 
