--- a/leksa-application-design/index.html
+++ b/leksa-application-design/index.html
@@ -239,7 +239,7 @@ footer .left img {
       </nav>
       <div class="actions">
         <a class="touch" href="mailto:hi@buildwithsam.work"><img src="assets/get_in_touch.svg" alt=""> Get In Touch</a>
-        <a class="resume-btn" href="/resume.pdf" target="_blank" rel="noopener"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
+      <a class="resume-btn" href="https://drive.google.com/file/d/1lS0kjE8geY-OMXZLydEb_Tg09POYE-pJ/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
       </div>
     </div>
   </header>
@@ -275,7 +275,7 @@ footer .left img {
     <section class="info" aria-label="Project Details">
       <div>
         <h4>TEAM</h4>
-        <ul><li>UX Designer</li><li>R&amp;D Sub Team</li><li>1 Engineers</li></ul>
+        <ul><li>UX Designer</li><li>R&amp;D Sub Team</li><li>1 Engineer</li></ul>
       </div>
       <div>
         <h4>MY ROLE</h4>
@@ -283,7 +283,7 @@ footer .left img {
       </div>
       <div>
         <h4>PROJECT TIMELINE</h4>
-        <ul><li>4 Months</li></ul>
+        <ul><li>2 Months</li></ul>
       </div>
       <div>
         <h4>TOOLS</h4>
@@ -419,7 +419,7 @@ footer .left img {
   <footer id="contact">
   <div class="left">Made w <img src="assets/heart.svg" width="14" alt="heart"> By Samriddhi.</div>    <div class="right">
       <a class="touch" href="mailto:hi@buildwithsam.work"><img src="assets/get_in_touch.svg" alt=""> Get In Touch</a>
-      <a class="resume-btn" href="/resume.pdf" target="_blank" rel="noopener"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
+      <a class="resume-btn" href="https://drive.google.com/file/d/1lS0kjE8geY-OMXZLydEb_Tg09POYE-pJ/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
     </div>
   </footer>
 
