Fix About page links + wire Resume CTAs to Drive preview

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -369,7 +369,7 @@
             <div class="dot-wrap"><span class="dot"></span></div>
             <div>
               <h4>
-                <a href="/lexa-application-design" target="_blank" rel="noopener">LEKSA APPLICATION DESIGN</a>
+<a href="/leksa-application-design/" target="_blank" rel="noopener">LEKSA APPLICATION DESIGN</a>
                 <svg class="open" viewBox="0 0 24 24"><path fill="#fff" d="M14 3h7v7h-2V6.41L9.41 16 8 14.59 17.59 5H14z"/></svg>
               </h4>
               <p class="desc">
@@ -388,7 +388,7 @@
             <div class="dot-wrap"><span class="dot"></span></div>
             <div>
               <h4>
-                <a href="https://www.behance.net/gallery/194370833/f16s-Website-Design" target="_blank" rel="noopener">F16s WEBSITE DESIGN</a>
+<a href="https://www.behance.net/gallery/194389565/f16s-Website-Design" target="_blank" rel="noopener">F16s WEBSITE DESIGN</a>
                 <svg class="open" viewBox="0 0 24 24"><path fill="#fff" d="M14 3h7v7h-2V6.41L9.41 16 8 14.59 17.59 5H14z"/></svg>
               </h4>
               <p class="desc">
@@ -441,7 +441,7 @@
             <div class="dot-wrap"><span class="dot"></span></div>
             <div>
               <h4>
-                <a href="https://www.behance.net/samriddhit" target="_blank" rel="noopener">COMMUNITIES APPLICATION</a>
+<a href="https://www.behance.net/gallery/177648913/Communities-App-(UIUX-Case-Study)" target="_blank" rel="noopener">COMMUNITIES APPLICATION</a>
                 <svg class="open" viewBox="0 0 24 24"><path fill="#fff" d="M14 3h7v7h-2V6.41L9.41 16 8 14.59 17.59 5H14z"/></svg>
               </h4>
               <p class="desc">
