--- a/about-me/index.html
+++ b/about-me/index.html
@@ -208,8 +208,8 @@
   <!-- ===== Header ===== -->
   <header>
     <div class="header-inner">
-      <a class="brand" href="#home" aria-label="Home">
-        <img src="assets/UXAI_LOGO.svg" alt="Avatar">
+      <a href="/" class="brand" aria-label="Home">
+  <img src="assets/UXAI_LOGO.svg" alt="Samriddhi — Home">
         <div class="hello-badge" aria-hidden="true">
           <div class="hello-chip">Hi, I'm Samriddhi</div>
         </div>
@@ -221,7 +221,7 @@
       </nav>
       <div class="actions">
         <a class="touch" href="mailto:hi@buildwithsam.work"><img src="assets/getintouch_icon.svg" alt=""> Get In Touch</a>
-        <a class="resume-btn" href="https://drive.google.com/file/d/1lS0kjE8geY-OMXZLydEb_Tg09POYE-pJ/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
+        <a class="resume-btn" href="https://drive.google.com/file/d/1AZPzsl7nj7JPyD67P_blrAeQ10_QqpLV/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
       </div>
     </div>
   </header>
@@ -243,7 +243,7 @@
         </p>
 
         <div class="link-stack">
-          <a class="text-cta" href="https://drive.google.com/file/d/1lS0kjE8geY-OMXZLydEb_Tg09POYE-pJ/view" target="_blank" rel="noopener noreferrer">Resume <img src="assets/side_arrow.svg" alt=""></a>
+          <a class="text-cta" href="https://drive.google.com/file/d/1AZPzsl7nj7JPyD67P_blrAeQ10_QqpLV/view" target="_blank" rel="noopener noreferrer">Resume <img src="assets/side_arrow.svg" alt=""></a>
           <a class="text-cta" href="https://www.linkedin.com/in/samriddhi-tiwari-2029a7223/" target="_blank" rel="noopener">LinkedIn <img src="assets/side_arrow.svg" alt=""></a>
           <button id="copyMail" class="text-cta" type="button">Email <img src="assets/copy.svg" alt=""></button>
         </div>
@@ -538,7 +538,7 @@
 
     <div class="out-links">
       <a class="text-cta" href="https://www.behance.net/samriddhi24" target="_blank" rel="noopener">Behance <img src="assets/side_arrow.svg" alt=""></a>
-      <a class="text-cta" href="https://drive.google.com/file/d/1lS0kjE8geY-OMXZLydEb_Tg09POYE-pJ/view" target="_blank" rel="noopener noreferrer">Resume <img src="assets/side_arrow.svg" alt=""></a>
+      <a class="text-cta" href="https://drive.google.com/file/d/1AZPzsl7nj7JPyD67P_blrAeQ10_QqpLV/view" target="_blank" rel="noopener noreferrer">Resume <img src="assets/side_arrow.svg" alt=""></a>
       <a class="text-cta" href="https://www.linkedin.com/in/samriddhi-tiwari-2029a7223/" target="_blank" rel="noopener">LinkedIn <img src="assets/side_arrow.svg" alt=""></a>
       <button id="copyMail2" class="text-cta" type="button">Email <img src="assets/copy.svg" alt=""></button>
     </div>
@@ -549,7 +549,7 @@
     <div class="left">Made w <img src="assets/heart.svg" width="14" alt="heart"> By Samriddhi.</div>
     <div class="right">
       <a class="touch" href="mailto:hi@buildwithsam.work"><img src="assets/getintouch_icon.svg" alt=""> Get In Touch</a>
-      <a class="resume-btn" href="https://drive.google.com/file/d/1lS0kjE8geY-OMXZLydEb_Tg09POYE-pJ/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
+      <a class="resume-btn" href="https://drive.google.com/file/d/1AZPzsl7nj7JPyD67P_blrAeQ10_QqpLV/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
     </div>
   </footer>
 
