--- a/leksa-application-design/index.html
+++ b/leksa-application-design/index.html
@@ -228,8 +228,8 @@ footer .left img {
   <!-- ===== HEADER ===== -->
   <header>
     <div class="header-inner">
-      <a class="brand" href="/" aria-label="Home">
-        <img src="assets/UXAI_LOGO.svg" alt="Avatar">
+      <a href="/" class="brand" aria-label="Home">
+  <img src="assets/UXAI_LOGO.svg" alt="Samriddhi — Home">
         <div class="hello-badge" aria-hidden="true"><div class="hello-chip">Hi, I'm Samriddhi</div></div>
       </a>
       <nav class="nav" aria-label="Primary">
@@ -239,7 +239,7 @@ footer .left img {
       </nav>
       <div class="actions">
         <a class="touch" href="mailto:hi@buildwithsam.work"><img src="assets/get_in_touch.svg" alt=""> Get In Touch</a>
-      <a class="resume-btn" href="https://drive.google.com/file/d/1lS0kjE8geY-OMXZLydEb_Tg09POYE-pJ/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
+      <a class="resume-btn" href="https://drive.google.com/file/d/1AZPzsl7nj7JPyD67P_blrAeQ10_QqpLV/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
       </div>
     </div>
   </header>
@@ -419,7 +419,7 @@ footer .left img {
   <footer id="contact">
   <div class="left">Made w <img src="assets/heart.svg" width="14" alt="heart"> By Samriddhi.</div>    <div class="right">
       <a class="touch" href="mailto:hi@buildwithsam.work"><img src="assets/get_in_touch.svg" alt=""> Get In Touch</a>
-      <a class="resume-btn" href="https://drive.google.com/file/d/1lS0kjE8geY-OMXZLydEb_Tg09POYE-pJ/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
+      <a class="resume-btn" href="https://drive.google.com/file/d/1AZPzsl7nj7JPyD67P_blrAeQ10_QqpLV/view" target="_blank" rel="noopener noreferrer"><img src="assets/resume_icon.svg" alt=""> RESUME</a>
     </div>
   </footer>
 
